js/js.translator/testData/incremental/invalidation/inlineFunctionAsFunctionReferenceWithCrossModuleInliner/lib1/l1.1.kt
inline fun bar() = "1"
